@@ -23,12 +23,12 @@ foreach ($data as $str) {
 echo "====BUFFERED====\n";
 $r = $db->query("SELECT a, b from strings");
 while ($r->valid()) {
-	var_dump($r->fetch_single());
+	var_dump($r->fetchSingle());
 }
 echo "====UNBUFFERED====\n";
-$r = $db->unbuffered_query("SELECT a, b from strings");
+$r = $db->unbufferedQuery("SELECT a, b from strings");
 while ($r->valid()) {
-	var_dump($r->fetch_single());
+	var_dump($r->fetchSingle());
 }
 echo "DONE!\n";
 ?>
