@@ -10,7 +10,7 @@ include "blankdb_oo.inc";
 $db->query("CREATE TABLE strings(a, b INTEGER, c VARCHAR(10), d)");
 $db->query("INSERT INTO strings VALUES('1', '2', '3', 'abc')");
 
-var_dump($db->fetch_column_types("strings"));
+var_dump($db->fetchColumnTypes("strings"));
 ?>
 --EXPECT--
 array(4) {
