@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ????? 2004, PHP 5 Release Candidate 2
+- Changed sqlite to use studlyCaps convention for its OO API. (Marcus)
 - Force destructors to have empty signatures. (Marcus)
 - Stopped file uploads from throwing E_WARNINGs and E_NOTICEs which can not be
   hidden from within scripts (and a result value in the $_FILES global can be
